# brio

./: .gitignore  README.md  pyproject.toml
src/brio/: ._setup.py  __init__.py  assets.py  constants.py  logging.py  main.py  sandbox.py
src/brio/assets/models/Crossing/: H1_Crossing_Track_collision.bam  H5_Curved_Crossing_Track_collision.bam
src/brio/assets/models/Elevated/: W10_High_Viaduct_Track_collision.bam  W4_Curved_Viaduct__Track.bam  W5_Curved_Viaduct__Track.bam  W7_Viaduct_Track_Pillar.bam  W7_Viaduct_Track_Pillar_collision.bam  W9_Bridge_Track_collision.bam
src/brio/assets/models/Straight/: A3_Reduction_Micro_Straight_Track_collision.bam  B2_Mini_Straight_Track_collision.bam  C2_Mini_Straight_Track_collision.bam  D_Straight_Track_collision.bam  K1_Double_Straight_Track.bam  R_Buffer_Stop.bam  S_Buffer_Stop.bam  U_Mini_Straight_Track.bam  U_Mini_Straight_Track_collision.bam  V_Mini_Straight_Track.bam  (+1 more)
src/brio/controls/: __init__.py  camera.py  clipboard.py  selection.py
src/brio/gui/: file_browser.py  gallery.py  main_gui.py  properties.py
src/brio/models/: track.py
src/brio/state/: manager.py
src/brio/tools/: __init__.py  collisionedit.py
src/trax/: __init__.py  assets.py  constants.py  logging.py  main.py  sandbox.py  setup.py  utils.py
src/trax/controls/: camera.py  clipboard.py  selection.py
src/trax/gui/: __init__.py  file_browser.py  gallery.py  main_gui.py  properties.py
src/trax/models/: __init__.py  table.py  track.py
src/trax/state/: __init__.py  exporter.py  manager.py
src/trax/tools/: __init__.py
(+67 files in other folders)
